tests-integration/tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_int/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_int/input.essence:3:16:
  |
3 | such that s != x
  |                ^
Type error: x
	Expected: set
	Got: int